name:                generator
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable generator
  default-language:    Haskell2010
  main-is:             generator.hs
  build-depends:
      base >= 4.7 && < 5,
    , containers >= 0.5
    , pandoc
    , hakyll     >= 4.15
    , process     >= 1.4
