[package]
name = "skema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0.1", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
lazy_static = "1.4.0"
regex = "1"
