[package]
name = "execution_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
casey = "0.3.3"
float_eq = { version = "1.0.1", features = ["derive", "float_eq_derive", "num", "num-complex"] }
num-bigint = "0.4.3"
num-traits = "0.2.15"
paste = "1.0.10"
