[package]
name = "get_comments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1"
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_json = "1.0.85"
nom = "7"
nom_locate = "4"
