[package]
name = "mathml"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.14", features = ["derive"] }
nom = "7"
nom_locate = "4"
petgraph = "0.6.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
html-escape = "0.2.12"
utoipa = { version = "3.0.3", features = ["actix_extras", "yaml", "debug"] }
derive-new = "0.5.9"
