[package]
name = "mathml"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.0.14", features = ["derive"] }
nom = "~7.1.3"
nom_locate = "~4.2.0"
petgraph = "~0.6.4"
serde = { version = "~1.0.152", features = ["derive"] }
serde_json = { version = "~1.0.91", features = ["preserve_order"] }
html-escape = "~0.2.12"
utoipa = { version = "~3.5.0", features = ["actix_extras", "yaml", "debug"] }
derive-new = "~0.5.9"
nanoid = "~0.4.0"
regex = "~1.10.3"
schemars = "~0.8.16"