[package]
name = "skema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "skema"
path = "src/lib.rs"

[dependencies]
serde_json = { version = "1.0.85", features = ["preserve_order"] }
serde = { version = "1.0.1", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
rsmgclient = { git = "https://github.com/ml4ai/rsmgclient" }
actix-web = "4.2.1"
comment_extraction = { path = "../comment_extraction" }
mathml = { path = "../mathml" }
utoipa = { version = "3.0.3", features = ["actix_extras", "yaml", "debug"] }
petgraph = "0.6.2"
clap = { version = "4.0.26", features = ["derive"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["actix-web"] }
schemars = { version = "0.8.12" }
tempdir = "0.3.7"
log = "0.4.19"
pretty_env_logger = "0.5.0"
zip = "0.6.6"
