[package]
name = "skema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "skema"
path = "src/lib.rs"

[dependencies]
serde_json = { version = "1.0.85", features = ["preserve_order"] }
serde = { version = "~1.0.1", features = ["derive"] }
strum_macros = "~0.24"
neo4rs = { version = "~0.7.0-rc.1" }
actix-web = "~4.5.1"
mathml = { path = "../mathml" }
utoipa = { version = "~3.5.0", features = ["actix_extras", "yaml", "debug"] }
petgraph = "~0.6.4"
clap = { version = "~4.0.26", features = ["derive"] }
utoipa-swagger-ui = { version = "~3.1.2", features = ["actix-web"] }
schemars = { version = "~0.8.12" }
pretty_env_logger = "0.5.0"
tokio = { version = "~1.36.0", features = ["full", "rt"] }
